--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <h1>CSS Basics</h1>
+    <h1 class="main-title">CSS Basics</h1>
 </body>
 </html>
