--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>CSS Basics Demo</title>
+
+    <!--Custom fonts go *before* your css files-->
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <!--the href contains the path to the CSS file-->
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <h1 class="main-title">CSS Basics</h1>
+    <h1 class="main-title fancy-font">CSS Basics</h1>
+    <div class="navbar">
+        <ul>
+            <li>Home</li>
+            <li>Work</li>
+            <li>School</li>
+            <li>Contact</li>
+            <li>Emergency</li>
+        </ul>
+    </div>
 </body>
 </html>
