--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
 
     <title>CSS Basics Demo</title>
 
+    <!--normalize library from cdnjs-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
     <!--Custom fonts go *before* your css files-->
     <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <!--the href contains the path to the CSS file-->
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <h1 class="main-title fancy-font">CSS Basics</h1>
+    <h1 class="main-title fancy-font fancy-font">CSS Basics</h1>
+
+    <div class="ferris-wheel-stock-image">
+
+    </div>
+    <div class="main-image">
+        <img class="main-image" src="images/20-12-40k-RoomMates1-fb.jpg" alt="new roommates">
+    </div>
+
+
+
     <div class="navbar">
         <ul>
             <li>Home</li>
